--- a/Practice-one-styles.css
+++ b/Practice-one-styles.css
@@ -13,13 +13,13 @@ body {
 
 .email-list {
     background-color: #008000;
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 .email {
     display: flex;
     justify-content: space-between;
-    padding: 8px;
+    /* padding: 8px; */
     background-color: #808080;
     margin-bottom: 5px;
     border-radius: 5px;
@@ -28,7 +28,7 @@ body {
 
 .selected-email {
     background-color: #000000;
-    padding: 5px;
+    /* padding: 5px; */
 }
 
 
@@ -49,7 +49,7 @@ body {
 .message {
     background-color: #ffffff;
     color: #000000;
-    padding: 15px;
+    /* padding: 15px; */
     margin-bottom: 10px;
     border-radius: 5px;
     width: 100%;
